# super-waffle

./: .envrc  .gitignore  .packit.yaml  .replit  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  Manifest.in  README.md  changes.yaml  digest.txt  new-ciq-mirrors.yaml  pyproject.toml  rlc-cloud-repos.spec  setup.cfg
.github/workflows/: ci.yml  release.yml
attached_assets/: Pasted--git-pytest-cache-vscode-attached-assets-rpm-src-rlc-cloud-repos-pycache-cloud-config-20-rlc-c-1745051300317.txt  Pasted--import-pytest-from-pathlib-import-Path-import-yaml-from-rlc-cloud-repos-framework-azure-mirrors-imp-1745042966656.txt
cloud-repos/rlc/cloud_repos/: __init__.py  __main__.py  dnf_vars.py  log_utils.py  main.py  repo_config.py  version.py
data/: ciq-mirrors.yaml
framework/: setup.cfg
framework/rlc_cloud_repos_framework/: azure_mirrors.py
rlc-cloud-repos-0.1.0/: PKG-INFO  README.md  pyproject.toml  setup.cfg
rlc-cloud-repos-0.1.0/src/rlc_cloud_repos/: cloud_metadata.py  main.py  repo_config.py
rlc-cloud-repos-0.1.0/src/rlc_cloud_repos/data/: mirrors.yaml
rlc-cloud-repos-0.1.0/tests/: test_cloud_repos.py
rpm/: python3-rlc-cloud-repos.spec.in  rlc-cloud-repos.spec  rlc-cloud-repos.spec.in
src/rlc_cloud_repos/: __init__.py  cloud_metadata.py  dnf_vars.py  log_utils.py  main.py  repo_config.py
src/rlc_cloud_repos/data/: ciq-mirrors.yaml
src/rlc_cloud_repos/framework/: azure_mirrors.py
src/rlc_cloud_repos/scripts/: 20_rlc-cloud-repos.cfg  rlc-cloud-repos-wrapper.sh
src/scripts/: 99-rlc-cloud-repos.cfg
tests/: conftest.py  test_azure_mirrors.py  test_cloud_metadata.py  test_cloud_metadata_suite.py  test_cloud_metadata_suite.py.bak  test_dnf_vars.py  test_main.py  test_repo_config.py
tests/fixtures/: azure.metadata.yaml  ciq-depot.repo  mock-instance-data-azure.json  mock-instance-data-bad.json  mock-instance-data-gcp.json  mock-instance-data-oracle.json  mock-instance-data.json  mock-mirrors.yaml
tests/fixtures/mock_dnf_vars/: baseurl1  baseurl2  rltype
tests/framework/: test_azure_mirrors.py
tests/metadata/: test_cloud_metadata_suite.py
tests/scripts/: test_dnf_vars_behavior.sh  test_remote_behavior.sh  test_remote_reboot.sh
