[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlc-cloud-repos"
version = "0.1.0"
description = "A universal cloud-init querying and repository configuration tool for Rocky Linux CIQ Derivatives"
readme = "README.md"
authors = [{ name = "CIQ", email = "support@ciq.com" }]
license = "MIT"  # ✅ use SPDX string, not a TOML table
requires-python = ">=3.6"
dependencies = [
    "pyyaml",
]

[project.scripts]
rlc-cloud-repos = "rlc_cloud_repos.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["rlc_cloud_repos", "rlc_cloud_repos.*"]

[tool.setuptools.package-data]
rlc_cloud_repos = [
    "data/ciq-mirrors.yaml",
    "scripts/20_rlc-cloud-repos.cfg"
]
