[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8"
dependencies = [
    "black>=24.8.0",
    "build>=0.10.0",
    "configargparse",
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
    "pyyaml",
    "setuptools>=40.6.0",
]
