[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8"
dependencies = [
    "black>=24.8.0",
    "build>=1.2.2.post1",
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0.2",
    "setuptools>=75.3.2",
    "configargparse>=1.7",
]
