[metadata]
name = rlc-cloud-repos
version = attr: rlc_cloud_repos.__version__
description = A universal cloud-init querying and repository configuration tool for Rocky Linux CIQ Derivatives
author = CIQ
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
include_package_data = true
install_requires =
    PyYAML

[options.package_data]
rlc_cloud_repos =
    data/ciq-mirrors.yaml
    cloud-config/20_rlc-cloud-repos.cfg

[options.packages.find]
where = src
include =
    rlc_cloud_repos
    rlc_cloud_repos.*

[options.entry_points]
console_scripts =
    rlc-cloud-repos = rlc_cloud_repos.main:main

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    isort
    black
    mypy
    build
    setuptools
