[metadata]
name = rlc.cloud-repos
version = 0.1.0
description = A cloud-init querying and repository configuration tool for Rocky Linux from CIQ Products (RLC)
long_description = file: README.md
author = CIQ Linux Engineering
author_email = support@ciq.com
license = MIT
url = https://github.com/ctrliq/rlc-cloud-repos

[options]
packages = find_namespace:
package_dir =
    = cloud-repos
python_requires = >=3.6,<3.14
include_package_data = true
install_requires =
    PyYAML

[options.packages.find]
where = cloud-repos
include = rlc*

[options.package_data]
rlc.cloud_repos =
    cloud-config/*.cfg
    data/*.yaml

[options.entry_points]
console_scripts =
    rlc-cloud-repos = rlc.cloud_repos.main:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    flake8
    isort
    black
    build>=0.9.0
    setuptools>=40.6.0

[tool:black]
line-length = 120

[tool:isort]
# Directories to be sorted by isort
src_paths = cloud-repos, framework, tests
skip = ./.cache
py_version = 36
