[metadata]
name = rlc-cloud-repos-framework
version = 0.1.0
description = Framework components for RLC Cloud Repos
long_description = Framework library for configuring RLC cloud repositories
author = CIQ Linux Engineering
author_email = support@ciq.com
license = MIT
url = https://github.com/ctrliq/rlc-cloud-repos

[options]
packages = find_namespace:
package_dir =
    = .
python_requires = >=3.6,<3.14
include_package_data = true
install_requires =
    rlc.cloud-repos
    PyYAML
    configargparse

[options.packages.find]
where = .
include = rlc_cloud_repos_framework*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0

[pip]
editable-mode = compat
