[metadata]
name = rlc-cloud-repos
version = 0.1.0
description = A universal cloud-init querying and repository configuration tool for Rocky Linux CIQ Derivatives
author = Joel Hanger
author_email = jhanger@ciq.com

[options]
packages = find:
package_dir = 
	= src
include_package_data = True
install_requires = 
	PyYAML
	ruamel.yaml

[options.package_data]
rlc_cloud_repos = data/mirrors.yaml

[egg_info]
tag_build = 
tag_date = 0

